# dv-ros2

./: .gitignore
dv_ros2_pydevo/launch/: devo_runner.launch.py
dv_ros2_unified/: CMakeLists.txt  notes.txt  package.xml
dv_ros2_unified/config/: calib_epa.xml
dv_ros2_unified/include/dv_ros2_unified/: Capture.hpp  Reader.hpp  Visualizer.hpp
dv_ros2_unified/launch/: BU_event_flow_composition.launch.py  driver.launch.py  event_flow_composition.launch.py  image_tools_composition.launch.py
dv_ros2_unified/src/: Capture.cpp  Reader.cpp  Visualizer.cpp
ros2_cpp_evfn_infer/: CMakeLists.txt  package.xml
ros2_cpp_evfn_infer/include/ros2_cpp_evfn_infer/: event_preprocessing.hpp  hdf5_utils.hpp  inference_node.hpp  threadpool.hpp  torch_converter.hpp  trt_engine.hpp
ros2_cpp_evfn_infer/launch/: event_flow_composition.launch.py  event_flow_composition_rec.launch.py  torch_converter_composition.launch.py
ros2_cpp_evfn_infer/src/: combined_main.cpp  combo.out  combo_v2.out  compilation_notes.txt  engine_loader.cpp  engine_test.out  env_cfg.sh  ev_utils.py  event_preproc_main.cpp  inference_node.cpp  out_fullres_C_HW.csv  preproc.out  torch_converter.cpp  trt_engine.cpp  trt_engine_main.cpp
scripts/: dv_ros2_bag_to_h5.py  visualize_events_h5.py
torch_converter/: CMakeLists.txt  package.xml
torch_converter/include/: torch_converter.hpp
torch_converter/launch/: torch_converter_composition.launch.py
torch_converter/src/: torch_converter.cpp
